[package]
name = "net226"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log={version="0.4.16"}
simple_logger={version = "2.1.0"}
crossbeam={version = "0.8.1"}
message-io={version = "0.14.5", features=["tcp", "udp"]}
uuid = { version = "0.8.2", features = ["v4"] }
ctrlc={ version = "3.2.1"}
bytes={version = "1.1.0"}
